--- a/genindex.html
+++ b/genindex.html
@@ -496,6 +496,12 @@
 </li>
       <li><a href="versioneer.html#versioneer.do_vcs_install">do_vcs_install() (in module versioneer)</a>
 </li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.does_request_succeed">does_request_succeed() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.does_request_succeed">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.download_file">download_file() (copyxnat.xnat_backend.pyxnat_server.PyXnatFile method)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.download_zip_file">download_zip_file() (copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase method)</a>
@@ -612,10 +618,18 @@
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_or_create_child">get_or_create_child() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="versioneer.html#versioneer.get_root">get_root() (in module versioneer)</a>
 </li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.get_server">get_server() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_server">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.get_server">(copyxnat.xnat.xnat_interface.XnatServer method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.get_version">get_version() (in module copyxnat.utils.versioning)</a>
 
       <ul>
@@ -923,16 +937,12 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.ohif_generate_session">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.ohif_present">ohif_present() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
-
-      <ul>
-        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.ohif_present">(copyxnat.xnat.xnat_interface.XnatServer method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.ohif_present">ohif_present() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
 </li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand">OhifCommand (class in copyxnat.commands.ohif_command)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.out_resource">out_resource (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources.out_resources">out_resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources method)</a>
@@ -1127,12 +1137,12 @@
         <li><a href="versioneer.html#versioneer.render_pep440_pre">(in module versioneer)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.request">request() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.request_json_property">request_json_property() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
+</li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.request_string">request_string() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
 
       <ul>
-        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.request">(copyxnat.xnat.xnat_interface.XnatServer method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.request">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.request_string">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       </ul></li>
       <li><a href="copyxnat.api.run_command.html#copyxnat.api.run_command.resolve_projects">resolve_projects() (in module copyxnat.api.run_command)</a>
