deploy: d11955ca88b250ea3265c024a3196e56a6a5cbe7

--- a/_modules/copyxnat/pyreporter/console.html
+++ b/_modules/copyxnat/pyreporter/console.html
@@ -77,14 +77,14 @@
             <span class="n">text</span> <span class="o">=</span> <span class="n">color</span> <span class="o">+</span> <span class="n">message</span> <span class="o">+</span> <span class="n">AnsiCodes</span><span class="o">.</span><span class="n">END</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="n">text</span> <span class="o">=</span> <span class="n">message</span>
-        <span class="nb">print</span><span class="p">(</span><span class="n">text</span> <span class="o">+</span> <span class="n">AnsiCodes</span><span class="o">.</span><span class="n">CLEAR</span><span class="p">)</span>
+        <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;</span><span class="se">\r</span><span class="s1">&#39;</span> <span class="o">+</span> <span class="n">text</span> <span class="o">+</span> <span class="n">AnsiCodes</span><span class="o">.</span><span class="n">CLEAR</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_reprint_sticky</span><span class="p">()</span></div>
 
     <span class="k">def</span> <span class="nf">_reprint_sticky</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Re-print sticky text&quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_last_sticky_text</span><span class="p">:</span>
             <span class="n">text</span> <span class="o">=</span> <span class="n">AnsiCodes</span><span class="o">.</span><span class="n">CYAN</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">_last_sticky_text</span> <span class="o">+</span> <span class="n">AnsiCodes</span><span class="o">.</span><span class="n">END</span>
-            <span class="nb">print</span><span class="p">(</span><span class="n">text</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="s1">&#39;</span><span class="se">\r</span><span class="s1">&#39;</span><span class="p">,</span> <span class="n">flush</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span></div>
+            <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;</span><span class="se">\r</span><span class="s1">&#39;</span> <span class="o">+</span> <span class="n">text</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="s1">&#39;&#39;</span><span class="p">,</span> <span class="n">flush</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span></div>
 </pre></div>
 
             <div class="clearer"></div>
