deploy: edcddb32db75b61d3e12721eec06cfd468e1605d

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -37,11 +37,7 @@
           <div class="body" role="main">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="copyxnat/api/run_command.html">copyxnat.api.run_command</a></li>
-<li><a href="copyxnat/commands/check_datatypes_command.html">copyxnat.commands.check_datatypes_command</a></li>
-<li><a href="copyxnat/commands/copy_command.html">copyxnat.commands.copy_command</a></li>
-<li><a href="copyxnat/commands/export_command.html">copyxnat.commands.export_command</a></li>
-<li><a href="copyxnat/commands/find_commands.html">copyxnat.commands.find_commands</a></li>
+<ul><li><a href="copyxnat/commands/export_command.html">copyxnat.commands.export_command</a></li>
 <li><a href="copyxnat/commands/ohif_command.html">copyxnat.commands.ohif_command</a></li>
 <li><a href="copyxnat/commands/rebuild_catalog_command.html">copyxnat.commands.rebuild_catalog_command</a></li>
 <li><a href="copyxnat/commands/show_command.html">copyxnat.commands.show_command</a></li>
@@ -52,7 +48,6 @@
 <li><a href="copyxnat/pyreporter/file_logger.html">copyxnat.pyreporter.file_logger</a></li>
 <li><a href="copyxnat/pyreporter/progress.html">copyxnat.pyreporter.progress</a></li>
 <li><a href="copyxnat/pyreporter/pyreporter.html">copyxnat.pyreporter.pyreporter</a></li>
-<li><a href="copyxnat/ui/copyxnat_command_line.html">copyxnat.ui.copyxnat_command_line</a></li>
 <li><a href="copyxnat/utils/network_utils.html">copyxnat.utils.network_utils</a></li>
 <li><a href="copyxnat/utils/rsync.html">copyxnat.utils.rsync</a></li>
 <li><a href="copyxnat/utils/versioneer_version.html">copyxnat.utils.versioneer_version</a></li>
@@ -60,7 +55,6 @@
 <li><a href="copyxnat/xnat/commands.html">copyxnat.xnat.commands</a></li>
 <li><a href="copyxnat/xnat/copy_cache.html">copyxnat.xnat.copy_cache</a></li>
 <li><a href="copyxnat/xnat/xml_cleaner.html">copyxnat.xnat.xml_cleaner</a></li>
-<li><a href="copyxnat/xnat/xnat_interface.html">copyxnat.xnat.xnat_interface</a></li>
 <li><a href="copyxnat/xnat_backend/pyxnat_server.html">copyxnat.xnat_backend.pyxnat_server</a></li>
 <li><a href="copyxnat/xnat_backend/server_factory.html">copyxnat.xnat_backend.server_factory</a></li>
 <li><a href="versioneer.html">versioneer</a></li>
