--- a/genindex.html
+++ b/genindex.html
@@ -988,6 +988,8 @@
       <ul>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.progress_update">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatProject.progress_update">(copyxnat.xnat.xnat_interface.XnatProject method)</a>
+</li>
       </ul></li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.project">project (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
@@ -1017,10 +1019,10 @@
       </ul></li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.ProjectFailure">ProjectFailure</a>
 </li>
-      <li><a href="copyxnat.utils.rsync.html#copyxnat.utils.rsync.ProjectRsync">ProjectRsync (class in copyxnat.utils.rsync)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.utils.rsync.html#copyxnat.utils.rsync.ProjectRsync">ProjectRsync (class in copyxnat.utils.rsync)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">projects() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.provide_metadata">provide_metadata() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
